updated trust anchor files

--- a/config/validation-producer.conf
+++ b/config/validation-producer.conf
@@ -1,6 +1,6 @@
 rule
 {
-  id "Example Validator 4"
+  id "Example Validator Producer"
   for interest
   filter
   {
@@ -15,7 +15,7 @@ rule
     signer
     {
       type file
-      file-name ./trust-alice.cert
+      file-name ./consumer1-ksk.cert
     }
   }
 }
