--- a/config/validation-third-party.conf
+++ b/config/validation-third-party.conf
@@ -15,7 +15,7 @@ rule
     signer
     {
       type file
-      file-name ./trust-jim.cert
+      file-name ./consumer2-ksk.cert
     }
   }
 }
@@ -37,7 +37,7 @@ rule
     signer
     {
       type file
-      file-name ./trust-alice.cert
+      file-name ./consumer1-ksk.cert
     }
   }
 
